--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -28,7 +28,7 @@
     <div class="collapse navbar-collapse" id="ftco-nav">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active"><a routerLink="/home" class="nav-link">Accueil</a></li>
-        <li class="nav-item active"><a routerLink="/profil" class="nav-link">Profile</a></li>
+        <li class="nav-item active"><a routerLink="/profil" class="nav-link">Profil</a></li>
         <li class="nav-item active"><a routerLink="/rdv" class="nav-link">Nouveau rendez-vous</a></li>
         <li class="nav-item active"><a routerLink="/historic" class="nav-link">Historiques</a></li>
         <li class="nav-item active"><a routerLink="/accueilClientBis" class="nav-link">Autres</a></li>
