--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,62 +1,61 @@
 .rappel-card {
-    max-width: 600px; /* Largeur maximale de la carte */
-    width: 100%; /* Garantit que la carte s'adapte à la largeur maximale */
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); /* Ombre */
-    text-align: left; /* Alignement du texte à gauche */
-    margin-bottom: 20px; /* Marge en bas pour l'espacement entre les cartes */
-    height: 100%;
-  }
-  .rappel-container{
-    margin-right: 16px;
-  }
-  .rappel-card-title{
-      font-size: 24px !important;
-      font-weight:500 !important;
-  }
-  .rappel-card-title:first-child{
-    text-align: start;
-  }
-  .avatar {
-    color: #fff;
-    width: 50px; /* Largeur de l'avatar */
-    height: 50px; /* Hauteur de l'avatar */
-    border-radius: 50%; /* Bord arrondi */
-    background-color: #003566; /* Couleur de fond */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-right: 10px; /* Marge à droite pour l'espacement */
-  }
+  max-width: 600px; /* Largeur maximale de la carte */
+  width: 100%; /* Garantit que la carte s'adapte à la largeur maximale */
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); 
+  text-align: left; 
+  margin-bottom: 20px; 
+  height: 100%;
+}
+.rappel-container{
+  margin-right: 16px;
+}
+.rappel-card-title{
+    font-size: 24px !important;
+    font-weight:500 !important;
+}
+.rappel-card-title:first-child{
+  text-align: start;
+}
+.avatar {
+  color: #fff;
+  width: 50px; 
+  height: 50px; 
+  border-radius: 50%; 
+  background-color: #003566; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 10px; 
+}
 
-  mat-icon {
-    font-size: 24px; /* Taille de l'icône */
-  }
+mat-icon {
+  font-size: 24px; 
+}
 
-  mat-card-title {
-    font-size: 20px; /* Taille du titre */
-    margin-bottom: 10px; /* Marge en bas pour l'espacement */
-  }
+mat-card-title {
+  font-size: 20px; 
+  margin-bottom: 10px; 
+}
 
-  mat-card-subtitle {
-    font-size: 16px; /* Taille du sous-titre */
-    color: #666; /* Couleur du texte */
-  }
+mat-card-subtitle {
+  font-size: 16px; 
+  color: #666; 
+}
 
-  /* Optionnel : ajoutez des médias pour rendre la mise en page réactive */
-  @media (max-width: 768px) {
-    .rappel-card {
-      padding: 15px; /* Réduire le rembourrage pour les écrans plus petits */
-    }
+@media (max-width: 768px) {
+  .rappel-card {
+    padding: 15px; 
   }
-  /* CSS */
-  .rappel-title {
-    color: #2a9b70; /* Couleur du titre */
-    text-align: center; /* Alignement centré */
-    margin-bottom: 20px; /* Marge en bas pour l'espacement */
-    font-size: 24px; /* Taille de la police du titre */
-  }
+}
+
+.rappel-title {
+  color: #2a9b70;
+  text-align: center;
+  margin-bottom: 20px; 
+  font-size: 24px; 
+}
 
 
 
