--- a/src/app/clientaccueil/clientaccueil.component.css
+++ b/src/app/clientaccueil/clientaccueil.component.css
@@ -14,6 +14,9 @@
     margin-right: 16px;
 
   }
+  .error-message{
+    width: 100%;
+  }
   .rappel-card-title{
       font-size: 24px !important;
       font-weight:500 !important;
